out/production/CompilerConstruction/yapl/Parser/Parser.jjt
PARSER_BEGIN(Example)

/** Simple brace matcher. */
import yapl.Parser.ParseException;public class Example {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    yapl.Parser.Example parser = new yapl.Parser.Example(System.in);
    parser.Input();
  }

}

PARSER_END(Example)

/** Root production. */
void Input() :
{}
{
  MatchedBraces() ("\n"|"\r")* <EOF>
}

/** Brace matching production. */
void MatchedBraces() :
{}
{
  "{" [ MatchedBraces() ] "}"
}
